# trade-bot

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: active_trading.yaml  baseline.yaml  events.yaml  m6.yaml  macro_fred.yaml  news_sources.yaml
docs/: 42macro_alignment.md  ai_review_whitepaper.md  backend_agent_guide.md  creative_strategy_backlog.md  cycle_tracker_design.md  defensive_bias_calibration.md  defensive_correction_search.md  doc_index.md  experiment_plan.md  experiment_reset_rerun_plan.md  faq.md  forward_testing_protocol.md  i111_selector_transition_repair.md  institutional_macro_coverage_gap.md  iteration_protocol.md  learnings.md  macro_framework_inspiration_gap.md  math_model_audit.md  ml_research_framework.md  native_timing_hazard_research.md  new_chat_seed_i111_adversarial_research_prompt.md  project_boundaries.md  research_pruning_and_growth.md  risk_repair_research.md  risk_timing_research.md  setup_guide.md  taxable_account_framework.md  technical_explainer.md  user_guide.md  v22_external_audit_response.md  whitepaper.md
tests/: test_action_headline.py  test_ai_concentration_repair.py  test_ai_repair_validation.py  test_approach_explorer.py  test_artifact_provenance.py  test_backtest_engine.py  test_backtest_pbo.py  test_backtest_qc.py  test_baselines.py  test_book_alignment.py  test_cli_dashboard_runtime.py  test_cli_simulation_validation.py  test_config.py  test_curation.py  test_current_state.py  test_cycle_tracker.py  test_dashboard_app.py  test_dashboard_briefs.py  test_dashboard_explainability.py  test_dashboard_formatting.py  (+82 more)
(+157 files in other folders)
