[tool.poetry]
name = "trade-bot"
version = "0.1.0"
description = "Local swing/momentum trading research and decision-support system."
authors = ["Trade Bot Maintainers"]
readme = "README.md"
packages = [{ include = "trade_bot", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
duckdb = ">=1.0.0,<2.0.0"
numpy = ">=1.24,<2.0"
pandas = ">=2.0,<3.0"
plotly = ">=5.18,<6.0"
pyarrow = ">=14.0,<22.0"
pydantic = ">=2.7,<3.0"
python-dotenv = ">=1.0,<2.0"
PyYAML = ">=6.0,<7.0"
requests = ">=2.32,<3.0"
rich = ">=13.7,<14.0"
streamlit = ">=1.38,<2.0"
typer = ">=0.12,<1.0"
yfinance = ">=0.2.50,<1.0"
scikit-learn = ">=1.5,<2.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.0,<26.0"
mypy = ">=1.10,<2.0"
pytest = ">=8.0,<9.0"
ruff = ">=0.7,<1.0"
types-PyYAML = ">=6.0,<7.0"

[tool.poetry.scripts]
trade-bot = "trade_bot.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
